Partially reapply "fix collapse persistence"
This partially reverts commit e12db041e145937ccb20576cac553ac688e3feee.

--- a/src/CollapseEmbeds/styles.module.scss
+++ b/src/CollapseEmbeds/styles.module.scss
@@ -25,6 +25,8 @@
     color: var(--interactive-normal);
     cursor: pointer;
     visibility: hidden;
+    padding: 4px;
+    margin: -4px;
     &:hover {
         color: var(--interactive-hover);
     }
